# Band-0

./: .gitignore  README.md  analyze.py  capture_hotspot.ps1  mitm_cleanup.bat  mitm_fix.bat  requirements.txt  start_capture.bat
analysis/: bootloader_strings_offsets.txt  firmware_summary.json  gpio_api_inventory.json  main_strings_offsets.txt  updater_strings_offsets.txt
cardputer-ap-arduino/: partitions_8mb.csv  platformio.ini
decompiled_src/: README.md
docs/: BASELINE10_VALIDATION_2026-05-20.md  BASELINE7_VALIDATION_2026-05-20.md  BASELINE_OPERATION_RUNBOOK.md  CARDPUTER_MITM_AP.md  CLAUDE_USAGE_PORTING_PLAN.md  DECOMPILATION_REPORT.md  DEMO_CHECKLIST.md  FULL_SESSION_RECAP_2026-05-19.md  GPIO_AND_API_MAP.md  HARDWARE_BREAKOUT_PLAN.md  LOCALIZATION_PLAYBOOK.md  OFFICIAL_FIRMWARE_ON_LOCAL_BASE.md  ONE_TIME_BASELINE_FLASH_PLAN.md  ORIGINAL_FIRMWARE_MITM_OTA.md  REVERSE_ENGINEERING_REPORT.md  UNCERTAINTY_PROBE_PLAN.md
extracted/: flash_addresses.json
sdk/: README.md  (+3 more)
sdk/cardputer-ap/main/: CMakeLists.txt  cardputer_ap_main.c  display_lcd.c  dns_server.c  web_config.c  wifi_ap.c
sdk/cardputer-ap/main/include/: config.h  display_lcd.h  dns_server.h  font_8x12.h  web_config.h  wifi_ap.h
sdk/main/: CMakeLists.txt  app_main.c  ble_pager.c  ble_usage.c  buzzer.c  claude_usage.c  cloud_ota.c  debug_server.c  diag_log.c  display_epd.c  gpio_key.c  nvs_utils.c  power_monitor.c  ui_render.c  wallpaper.c  wifi_config.c
sdk/main/include/: app_config.h  ble_pager.h  ble_usage.h  buzzer.h  claude_usage.h  cloud_ota.h  debug_server.h  diag_log.h  display_epd.h  gpio_key.h  nvs_utils.h  power_monitor.h  ui_render.h  wallpaper.h  wifi_config.h
(+9049 files in other folders)
