idf_component_register(
    SRCS
        app_main.c
        gpio_key.c
        buzzer.c
        display_epd.c
        wifi_config.c
        wallpaper.c
        cloud_ota.c
        claude_usage.c
        power_monitor.c
        ble_usage.c
        debug_server.c
        diag_log.c
        ui_render.c
        ble_pager.c
        nvs_utils.c
    INCLUDE_DIRS
        include
    PRIV_REQUIRES
        app_update
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_http_client
        esp_http_server
        esp_https_ota
        bt
        lz4
        jd79650
        json
        driver
        esp_adc
        esp_timer
)
